syntax = "proto3";

package helloworld.import_none;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloReply {
    string message = 1;
}

message HelloRequest {
    string name = 1;
}

